--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -17,26 +17,36 @@ h1, h2, h3 {
     font-family: 'CustomFont', sans-serif;
 }
 
+/* Adjust the size of the H1 title */
+h1.title {
+    font-size: 3.5em; /* Increased size for more impact */
+    color: #FFD700;
+    margin-bottom: 20px;
+}
+
+/* Header and Footer with fixed gradient borders */
 header, footer {
     background-color: #000;
-    border-bottom: 5px solid transparent;
-    border-image: linear-gradient(45deg, #FFD700, #FFBF00) 1;
+    padding: 10px 0;
+    border-bottom: 5px solid;
+    border-image: linear-gradient(90deg, #FFD700, #9235b4) 1; /* Horizontal gradient */
 }
 
 footer {
-    border-top: 5px solid transparent;
-    border-image: linear-gradient(45deg, #FFD700, #FFBF00) 1;
-    padding: 10px 0;
+    border-top: 5px solid;
+    border-image: linear-gradient(90deg, #FFD700, #9235b4) 1; /* Horizontal gradient */
     text-align: center;
 }
 
 nav ul {
     list-style-type: none;
     padding: 0;
+    margin: 0;
+    text-align: center;
 }
 
 nav ul li {
-    display: inline;
+    display: inline-block;
     margin-right: 20px;
 }
 
@@ -58,13 +68,8 @@ nav ul li a:hover {
     display: none;
 }
 
-h1.title {
-    font-size: 2.5em;
-    color: #FFD700;
-}
-
 h2 {
-    font-size: 2em;
+    font-size: 2.5em;
     margin-bottom: 10px;
     color: #FFD700;
 }
