--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -19,35 +19,47 @@ h1, h2, h3 {
 
 /* Adjust the size of the H1 title */
 h1.title {
-    font-size: 3.5em; /* Increased size for more impact */
+    font-size: 8em; /* Increased size for more impact */
     color: #FFD700;
     margin-bottom: 20px;
 }
 
-/* Header and Footer with fixed gradient borders */
+/* Flexbox for Header and Footer with gradient borders */
 header, footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: #000;
     padding: 10px 0;
-    border-bottom: 5px solid;
-    border-image: linear-gradient(90deg, #FFD700, #9235b4) 1; /* Horizontal gradient */
+    position: relative;
 }
 
-footer {
-    border-top: 5px solid;
-    border-image: linear-gradient(90deg, #FFD700, #9235b4) 1; /* Horizontal gradient */
-    text-align: center;
+header::before, header::after, footer::before, footer::after {
+    content: '';
+    position: absolute;
+    height: 5px;
+    width: 100%;
+    background: linear-gradient(90deg, #FFD700, #9235b4);
+}
+
+header::before, footer::before {
+    top: 0;
+}
+
+header::after, footer::after {
+    bottom: 0;
 }
 
 nav ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
-    text-align: center;
+    display: flex;
+    gap: 20px;
 }
 
 nav ul li {
     display: inline-block;
-    margin-right: 20px;
 }
 
 nav ul li a {
