--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,7 +1,7 @@
 /* Main Content with Background Image */
 #main-content {
     padding: 20px;
-    background-image: url('assets/dancer_title.jpg'); /* Replace with the path to your image */
+    background-image: url('../assets/dancer_title.jpg'); /* Replace with the path to your image */
     background-size: cover; /* Ensures the image covers the entire area */
     background-position: center; /* Centers the image */
     background-repeat: no-repeat; /* Prevents the image from repeating */
