--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -13,7 +13,7 @@ body {
     background-color: #000;
     color: #FFD700;
     line-height: 1.6;
-    font-size: 4em;
+    font-size: 14px;
 }
 
 a {
